Adiciona vercel.json para configurar rotas de API no Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,10 @@
       "source": "/api/(.*)",
       "destination": "/server.js"
     }
-  ]
+  ],
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
+    }
+  }
 }
