--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,17 @@
 {
   "name": "guia-bsi-backend",
   "version": "1.0.0",
-  "description": "Backend para o projeto Guia BSI",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "setup-trilha": "node setup-trilha.js"
+    "setup": "node setup-trilha.js"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "express-session": "^1.18.2",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
-    "session-file-store": "^1.5.0",
     "sqlite3": "^5.1.7"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.11"
   }
 }
